--- a/Kaledinis sveikinimas/eglutes.html
+++ b/Kaledinis sveikinimas/eglutes.html
@@ -20,8 +20,9 @@
         </div>
         <img src="img/egle2test.jpg" alt="Vilnius 2017">
       </div>
-        <div class="nr2">
-          <img src="img/funny.gif" alt="Funny">
+        <div class="nr3">
+          <iframe width="840" height="615" src="https://www.youtube.com/embed/SDFOEzqLIKU?autoplay=1">
+          </iframe>
             <nav>
               <ul>
                 <li><a href="index.html">Grįžti Atgal <b>&#8617<b></a></li>
