--- a/Kaledinis sveikinimas/index.html
+++ b/Kaledinis sveikinimas/index.html
@@ -15,13 +15,14 @@
           Kad jūsų namuose vyrautų santarvė ir supratimas!
             <nav>
               <ul>
-                <li><a href="eglutes.html">Eglutės Spausk Čia <b>&#8617<b></a></li>
+                <li><a href="eglutes.html">Eglutės Spausk Čia <b> &#8617<b></a></li>
               </ul>
             </nav>
         </div>
       </div>
         <div class="nr2">
-          <img src="img/snow.gif" alt="Snow">
+      <iframe width="700" height="567" src="https://www.youtube.com/embed/F0URy9FyRJ4?autoplay=1">
+      </iframe>
         </div>
         <footer>
         &copy Marijus R. 2017
